# solar-power

./: .env.example  .env.supabase.example  .gitignore  AGENTS.md  CLAUDE.md  README-CODEX-HARNESS.md  README.md  README_FOR_DEV.md  agent.md  package-lock.json  package.json  requests.http
apps/api/: main.py  pyproject.toml
apps/api/services/: solar_calculator.py
apps/api/tests/: test_solar_calculator.py
docs/: 01-service-overview.md  07-data-bm-plan.md  CODEX_HARNESS.md  CODEX_PROMPTS.md  DEV_HANDOFF_CLIMATE_APIS.md  HANDOFF_PACKAGE.md  REPORT_AGENT_HANDOFF.md  admin-consultations.md  api-contract.md  api_spec_climate_har.md  climate-live-integration.md  data-sources.md  final-demo-flow.md  hwaseong-building-polygon-integration.md  profit-report-agent.md  sample-profit-report.json  sample-simulation-ai-result.json  sample_report_hwaseong.html  sample_report_hwaseong.json  simulation-ai-agent-payload.md  subsidy-rag.md  supabase-first-mvp.md  supabase-integration.md
scripts/: api_stability_sweep.py  bootstrap_repo.sh  check-profit-report-tables.sql  check-subsidy-rag-tables.sql  check-windows.ps1  enrich_buildings_with_wfs.py  final-production-smoke-test.ps1  generate_fixture_batch.py  generate_sample_report.py  harness-check.ps1  harness-check.sh  hwaseong_b2g_aggregates.py  mvp_app.py  poc_rooftop_pipeline.ipynb  poc_rooftop_pipeline.py  sync-climate-poc-to-public.mjs  sync-hwaseong-buildings-to-public.mjs  test-production-admin-consultations.ps1  test-production-profit-report-flow.ps1  test-production-subsidy-rag-flow.ps1  test-production-supabase-flow.ps1  (+2 more)
(+353 files in other folders)
